add missing figs

--- a/coregui_gamma/coregui_gamma.html
+++ b/coregui_gamma/coregui_gamma.html
@@ -531,8 +531,9 @@ connection back to 0.0075</p>
 <code>Synapses</code>, then change the <code>GABAA decay time</code>
 from 5.0 ms to 2.0 ms, as shown in Figure 15 below.</p>
 <h4 id="figure-15">Figure 15</h4>
-<p><strong>This figure will be added after PR to fix Synapses widget is
-merged</strong></p>
+<div style="display:block; width:90%; max-width:800px; margin: 0 auto;">
+<p><img src="images/gamma_fig_15.png" /></p>
+</div>
 <p>:exclamation: Note in these simulations the weights of the GABAB
 synapses are all set to zero</p>
 <p>From the <code>Simulation</code> tab, change the <code>Name</code> to
@@ -541,11 +542,11 @@ button. Then create new visualizations to show the spike plot and the
 spectrogram for your simulation, as shown in Figure 16 below.</p>
 <h4 id="figure-16.a">Figure 16.A</h4>
 <div style="display:block; width:90%; max-width:800px; margin: 0 auto;">
-<p><img src="images/gamma_fig_16_0.png" /></p>
+<p><img src="images/gamma_fig_16_01.png" /></p>
 </div>
 <h4 id="figure-16.b">Figure 16.B</h4>
 <div style="display:block; width:90%; max-width:800px; margin: 0 auto;">
-<p><img src="images/gamma_fig_16_0.png" /></p>
+<p><img src="images/gamma_fig_16_02.png" /></p>
 </div>
 <p>Notice that the rhythm is now faster at ~ 60 Hz. As illustrated in
 the spiking activity, the faster decay of inhibition allows the
